--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   loading_animation_widget:
+  shared_preferences:
 
 
   # The following adds the Cupertino Icons font to your application.
